Add the ability to use foreign from java.base
Simple package rename to java.lang.foreign, and the package name may
still change.
Java 18 JEP 419 is not supported.